force-app/main/default/objects/Trainer_Questionnaire__c/Trainer_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Trainer Questionnaire</label>
    <nameField>
        <displayFormat>TQ-{00000}</displayFormat>
        <label>Trainer Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainer Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>