force-app/main/default/objects/Trainer_Questionnaire__c/fields/Close_Contact_with_Confirmed_covid_case__c.field-meta.xml
<CustomField>
    <fullName>Close_Contact_with_Confirmed_covid_case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Contact with Confirmed covid case</label>
    <type>Checkbox</type>
</CustomField>