force-app/main/default/objects/Trainer_Questionnaire__c/fields/Close_Contact_With_Symptomatic_Person__c.field-meta.xml
<CustomField>
    <fullName>Close_Contact_With_Symptomatic_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Contact With Symptomatic Person</label>
    <type>Checkbox</type>
</CustomField>