force-app/main/default/objects/Trainer_Questionnaire__c/fields/Experiencing_Cough__c.field-meta.xml
<CustomField>
    <fullName>Experiencing_Cough__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencing Cough or Barking Cough</label>
    <type>Checkbox</type>
</CustomField>