force-app/main/default/objects/Trainer_Questionnaire__c/fields/Experiencing_Fever__c.field-meta.xml
<CustomField>
    <fullName>Experiencing_Fever__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencing Fever/Chills</label>
    <type>Checkbox</type>
</CustomField>