force-app/main/default/objects/Trainer_Questionnaire__c/fields/Experiencing_Headache__c.field-meta.xml
<CustomField>
    <fullName>Experiencing_Headache__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencing Headache</label>
    <type>Checkbox</type>
</CustomField>