force-app/main/default/objects/Trainer_Questionnaire__c/fields/Experiencing_nausea_vomiting_diarrhea__c.field-meta.xml
<CustomField>
    <fullName>Experiencing_nausea_vomiting_diarrhea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencing nausea, vomiting, diarrhea</label>
    <type>Checkbox</type>
</CustomField>