force-app/main/default/objects/Trainer_Questionnaire__c/fields/Experiencing_Runny_Stuffy_Nose__c.field-meta.xml
<CustomField>
    <fullName>Experiencing_Runny_Stuffy_Nose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencing Runny/Stuffy Nose</label>
    <type>Checkbox</type>
</CustomField>