force-app/main/default/objects/Trainer_Questionnaire__c/fields/Experiencing_Sore_Throat__c.field-meta.xml
<CustomField>
    <fullName>Experiencing_Sore_Throat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experiencing Sore Throat</label>
    <type>Checkbox</type>
</CustomField>