force-app/main/default/objects/Trainer_Questionnaire__c/fields/Identified_As_Close_Contact_In_14_Days__c.field-meta.xml
<CustomField>
    <fullName>Identified_As_Close_Contact_In_14_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have you been identified as a &quot;close contact&quot; of someone who has had COVID-19 in the last 14 days? If you are fully vaccinated and have not been advised by public health to self-isolate, select no.</description>
    <label>Identified As Close Contact In 14 Days</label>
    <type>Checkbox</type>
</CustomField>