force-app/main/default/objects/Trainer_Questionnaire__c/fields/Tested_Positive_In_Last_10_Days__c.field-meta.xml
<CustomField>
    <fullName>Tested_Positive_In_Last_10_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In the last 10 days, have you tested positive on a rapid antigen or home-based self-testing kit? If you have since tested negative on a lab-based PCR test, select no.</description>
    <label>Tested Positive In Last 10 Days</label>
    <type>Checkbox</type>
</CustomField>