force-app/main/default/objects/Trainer_Questionnaire__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trainer_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>