force-app/main/default/objects/Trainer_Questionnaire__c/fields/Travelled_Outside_Canada_In_Last_14_Days__c.field-meta.xml
<CustomField>
    <fullName>Travelled_Outside_Canada_In_Last_14_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travelled Outside Canada In Last 14 Days</label>
    <type>Checkbox</type>
</CustomField>