force-app/main/default/objects/Trainer_Questionnaire__c/recordTypes/Covid.recordType-meta.xml
<RecordType>
    <fullName>Covid</fullName>
    <active>true</active>
    <description>Used for Contact Tracing of trainers</description>
    <label>Covid</label>
</RecordType>