force-app/main/default/objects/Trainer_Questionnaire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Trainer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>