force-app/main/default/objects/Trainer_Questionnaire__c/listViews/Investigate_Covid_Questionnaires.listView-meta.xml
<ListView>
    <fullName>Investigate_Covid_Questionnaires</fullName>
    <columns>NAME</columns>
    <columns>Trainer__c</columns>
    <columns>Experiencing_Fever__c</columns>
    <columns>Experiencing_Cough__c</columns>
    <columns>Experiencing_Shortness_of_Breath__c</columns>
    <columns>Experiencing_Sore_Throat__c</columns>
    <columns>Close_Contact_With_Symptomatic_Person__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Alert_Email_Sent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Investigate Covid Questionnaires</label>
</ListView>