force-app/main/default/objects/Trainer_Questionnaire__c/listViews/Todays_Questionnaires.listView-meta.xml
<ListView>
    <fullName>Todays_Questionnaires</fullName>
    <columns>NAME</columns>
    <columns>Trainer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays Questionnaires</label>
</ListView>